# pgmlink

./: .gitignore  .gitmodules  CMakeLists.txt
cmake_extensions/: FindDPCT.cmake  FindHDF5.cmake
include/pgmlink/: classifier_auxiliary.h  conservationtracking_parameter.h  constrackinginferencemodel.h  constraint_function.hxx  constraint_pool.hxx  energy_computer.h  event.h  extract_region_features.h  feature.h  feature_extraction.h  featurestore.h  field_of_view.h  graph.h  higher_order_features.h  hypotheses.h  log.h  merger_resolving.h  merger_resolving_grammar.h  nearest_neighbors.h  opengm_dataset.h  perturbedinferencemodel.h  pgm.h  pgm_chaingraph.h  randomforest.h  reasoner.h  reasoner_constracking.h  reasoner_constracking_explicit.h  reasoner_dyn_prog_constracking.h  reasoner_pgm.h  structuredLearningTracking.h  util.h  (+6 more)
python/: CMakeLists.txt  pyUncertaintyParameter.cpp  pyevaluation.cpp  pyextract_region_features.cpp  pyfield_of_view.cpp  pyhypotheses.cpp  pymerger_resolving.cpp  pymulti_hypotheses.cpp  pypgmlink.cpp  pytemplated_pickle_suite.h  pytrack.cpp  pytraxels.cpp  trainClassifiers.py
scripts/: extract_solution.py
src/: classifier_auxiliary.cpp  constrackinginferencemodel.cpp  constraint_pool.cpp  dynprog_constrackinferencemodel.cpp  energy_computer.cpp  event.cpp  feature.cpp  feature_extraction.cpp  featurestore.cpp  field_of_view.cpp  higher_order_features.cpp  hypotheses.cpp  inferencemodel.cpp  merger_resolving.cpp  nearest_neighbors.cpp  opengm_dataset.cpp  perturbedinferencemodel.cpp  pgm.cpp  pgm_chaingraph.cpp  randomforest.cpp  reasoner_constracking.cpp  reasoner_constracking_explicit.cpp  reasoner_dyn_prog_constracking.cpp  reasoner_pgm.cpp  structuredLearningTracking.cpp  tracking.cpp  tracking_feature_extractor.cpp  traxels.cpp
tests/: CMakeLists.txt  constraint_test.cpp  event_serialization_test.cpp  feature_extraction_test.cpp  feature_test.cpp  field_of_view_test.cpp  funkey_test.cpp  graph_test.cpp  higher_order_features_test.cpp  hypotheses_test.cpp  merger_resolver_test.cpp  pgm_test.cpp  reasoner_constracking_test.cpp  reasoner_dyn_prog_constracking_test.cpp  reasoner_pgm_test.cpp  tracking_feature_extractor_test.cpp  traxels_test.cpp  uncertainty_test.cpp  util_test.cpp
tests/ext_opengm/: test_feature.cxx  test_functions.cxx  test_loglinearmodel.cxx  test_structsvm.cxx
tests/system/: learning_systemtest.cpp.cmake
tools/: CMakeLists.txt  block_icm.cpp  constraint_checker.cpp  inference.cpp
(+74 files in other folders)
